refactor: add loads of styles and a way to remove the style when necessary

--- a/Natural Born Privacy Chrome Extension/styles/pink.css
+++ b/Natural Born Privacy Chrome Extension/styles/pink.css
@@ -1,6 +1,5 @@
 *{
-    // background-image: url('chrome-extension://__MSG_@@extension_id__/images/secret-background2.png');
-    background-color: #000; //test
+    background-image: url('chrome-extension://__MSG_@@extension_id__/images/pink.png');
     color: #22FF22;
     font-size: 12px;
 }
