chore: cleanup and add comments

--- a/Natural Born Privacy Chrome Extension/styles/pinkInverted.css
+++ b/Natural Born Privacy Chrome Extension/styles/pinkInverted.css
@@ -1,3 +1,4 @@
+// TODO CUSTOM STYLING
 *{
     background-image: url('chrome-extension://__MSG_@@extension_id__/images/secret-background2.png');
     color: #22FF22;
