--- a/Natural Born Privacy Chrome Extension/styles/greenInverted.css
+++ b/Natural Born Privacy Chrome Extension/styles/greenInverted.css
@@ -1,3 +1,4 @@
+// TODO CUSTOM STYLING
 *{
     background-image: url('chrome-extension://__MSG_@@extension_id__/images/pink.png');
     color: #22FF22;
